<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_view_quilt"
            android:title="@string/ic_list" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/ic_search" />
    </group>

    <item  android:id="@+id/label" android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/title_activity_settings" />

        </menu>
    </item>

</menu>
